reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__replay__rebuild.rs_line_355_col_5.log

*** crates/tracewake-core/src/replay/rebuild.rs:355:5: replace replay_prefix -> Result<(EventLog, PhysicalState, AgentState, EpistemicProjection), String> with Ok((Default::default(), Default::default(), Default::default(), Default::default()))

*** mutation diff:
--- crates/tracewake-core/src/replay/rebuild.rs
+++ replace replay_prefix -> Result<(EventLog, PhysicalState, AgentState, EpistemicProjection), String> with Ok((Default::default(), Default::default(), Default::default(), Default::default()))
@@ -347,38 +347,17 @@
         .map_err(|_| "invalid_trace_canonical")
 }
 
 fn replay_prefix(
     initial_state: &PhysicalState,
     initial_agent_state: &AgentState,
     events: &[EventEnvelope],
 ) -> Result<(EventLog, PhysicalState, AgentState, EpistemicProjection), String> {
-    let mut prefix_log = EventLog::new();
-    let mut state = initial_state.clone();
-    let mut agent_state = initial_agent_state.clone();
-    let mut epistemic_projection = EpistemicProjection::new(
-        events
-            .first()
-            .map(|event| event.content_manifest_id.clone())
-            .unwrap_or_else(|| ContentManifestId::new("empty_prefix").unwrap()),
-    );
-    for event in events {
-        let appended = prefix_log
-            .append(event.clone())
-            .map_err(|error| format!("prefix_append_error:{error:?}"))?;
-        let mut application_context = EventApplicationContext {
-            physical_state: &mut state,
-            agent_state: &mut agent_state,
-            epistemic_projection: Some(&mut epistemic_projection),
-        };
-        apply_event_stream(&mut application_context, &appended)
-            .map_err(|error| format!("prefix_apply_error:{error:?}"))?;
-    }
-    Ok((prefix_log, state, agent_state, epistemic_projection))
+    Ok((Default::default(), Default::default(), Default::default(), Default::default())) /* ~ changed by cargo-mutants ~ */
 }
 
 fn latest_frame_event_id(log: &EventLog) -> Option<EventId> {
     log.events()
         .iter()
         .rev()
         .find(|event| {
             matches!(


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `PhysicalState: Default` is not satisfied
   --> crates/tracewake-core/src/replay/rebuild.rs:355:29
    |
355 |     Ok((Default::default(), Default::default(), Default::default(), Default::default())) /* ~ changed by cargo-mutants ~ */
    |                             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `PhysicalState`
   --> crates/tracewake-core/src/state.rs:127:1
    |
127 | pub struct PhysicalState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `EpistemicProjection: Default` is not satisfied
   --> crates/tracewake-core/src/replay/rebuild.rs:355:69
    |
355 |     Ok((Default::default(), Default::default(), Default::default(), Default::default())) /* ~ changed by cargo-mutants ~ */
    |                                                                     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EpistemicProjection`
   --> crates/tracewake-core/src/epistemics/projection.rs:272:1
    |
272 | pub struct EpistemicProjection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `state::PhysicalState: Default` is not satisfied
   --> crates/tracewake-core/src/replay/rebuild.rs:355:29
    |
355 |     Ok((Default::default(), Default::default(), Default::default(), Default::default())) /* ~ changed by cargo-mutants ~ */
    |                             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `state::PhysicalState`
   --> crates/tracewake-core/src/state.rs:127:1
    |
127 | pub struct PhysicalState {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `projection::EpistemicProjection: Default` is not satisfied
   --> crates/tracewake-core/src/replay/rebuild.rs:355:69
    |
355 |     Ok((Default::default(), Default::default(), Default::default(), Default::default())) /* ~ changed by cargo-mutants ~ */
    |                                                                     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `projection::EpistemicProjection`
   --> crates/tracewake-core/src/epistemics/projection.rs:272:1
    |
272 | pub struct EpistemicProjection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
